#857 upgraded maven plugins surefire, failsafe, pmd, checkstyle, enforcer and build-helper supporting Java 11